# apertium-arz

./: Makefile.am  README  apertium-arz.arz.dix  apertium-arz.pc.in  apertium-arz.post-arz.dix  configure.ac  modes.xml
